# Raytracer-for-FotorealisticCG

./: .gitignore
1/: CMakeLists.txt  Matrix.cpp  Plane.h  Point.cpp  Sphere.cpp  Sphere.h  Triangle.h  Vector.cpp  main.cpp
1/src/: main.cpp
1/src/foto_tasks/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  tasks.h  tga_sample.cpp
1/src/rtx/: Antialiaser.cpp  Antialiaser.h  Camera.cpp  Camera.h  Light.h  LightIntensity.h  Material.h  Matrix.h  OrtographicCamera.cpp  OrtographicCamera.h  PanoramicCamera.cpp  PanoramicCamera.h  Plane.cpp  Plane.h  Point.h  PointLight.h  Quaternion.cpp  Quaternion.h  RTAntialiaser.cpp  RTAntialiaser.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h
1/src/tga/: color.cpp  color.h  tga_buffer.cpp  tga_buffer.h  tga_rasterizer.cpp  tga_rasterizer.h  util.h
1/src/tga/math/: func.h  math.h  vector.h
1/src/tga/tga_spec/: tga_data.cpp  tga_data.h  tga_file.cpp  tga_file.h  tga_footer.cpp  tga_footer.h  tga_header.cpp  tga_header.h  tga_pixel.h  tga_spec.h
